Fix about page alignment

--- a/landing_page.css
+++ b/landing_page.css
@@ -87,15 +87,14 @@ body{
     background-color: var(--header_color);
     justify-content: center;
     position: relative;
-    top: 95px;
-    left: 10px;
+    top: 100px;
 }
 
 .brands{
     cursor: pointer;
     font-size: 2.2rem;
     color: var(--font_color);
-    padding-left: 10px;
+    padding-left: 12px;
     text-decoration: none;
 }
 
@@ -163,7 +162,7 @@ body{
     font-size: clamp(2rem, 4vw, 2.5rem);
     color: var(--font_color);
     text-align: center;
-    padding: 0 18% 0 20%;
+    padding: 0 18% 0 19%;
 }
 
 #technical{
